--- a/polls/templates/polls/conclude.html
+++ b/polls/templates/polls/conclude.html
@@ -9,6 +9,14 @@
     {% for a, b in diagnosis.items%}
     <p>{{ a }} : {{ b }}</p>
     {% endfor %}
+    <div class="mdl-card__title mdl-card--border">
+      <h2 class="mdl-card__title-text">Recommended lab tests:</h2>
+    </div>
+    <p>{{ labs }}</p>
+    <div class="mdl-card__title mdl-card--border">
+      <h2 class="mdl-card__title-text">Recommended drugs:</h2>
+    </div>
+    <p>{{ drugs }}</p>
     <div class="mdl-card__actions mdl-card--border">
       <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'polls:restart' %}">
         Another round!
