--- a/polls/templates/polls/initial.html
+++ b/polls/templates/polls/initial.html
@@ -5,6 +5,53 @@
   <form class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp" method="POST">
     {% csrf_token %}
     <div class="mdl-card__title mdl-card--border">
+      <h2 class="mdl-card__title-text">what's the gender of the patient</h2>
+    </div>
+    <div class="mdl-card__supporting-text no-vertical-padding">
+      <ul class="choice-list-control mdl-list">
+        <li class="mdl-list__item">
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" >
+            <input type="radio" id=1 class="mdl-radio__button" name="gender" value="Male">
+            <span class="mdl-radio__label">Male</span>
+          </label>
+        </li>
+        <li class="mdl-list__item">
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" >
+            <input type="radio" id=2 class="mdl-radio__button" name="gender" value="Female">
+            <span class="mdl-radio__label">Female</span>
+          </label>
+        </li>
+      </ul>
+    </div>
+
+    {% csrf_token %}
+    <div class="mdl-card__title mdl-card--border">
+      <h2 class="mdl-card__title-text"> in which age bracket is the patient</h2>
+    </div>
+    <div class="mdl-card__supporting-text no-vertical-padding">
+      <ul class="choice-list-control mdl-list">
+        <li class="mdl-list__item">
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" >
+            <input type="radio" id=3 class="mdl-radio__button" name="age" value="Children">
+            <span class="mdl-radio__label">Children</span>
+          </label>
+        </li>
+        <li class="mdl-list__item">
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" >
+            <input type="radio" id=4 class="mdl-radio__button" name="age" value="Adults">
+            <span class="mdl-radio__label">Adults</span>
+          </label>
+        </li>
+        <li class="mdl-list__item">
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" >
+            <input type="radio" id=5 class="mdl-radio__button" name="age" value="Elderly">
+            <span class="mdl-radio__label">Elderly</span>
+          </label>
+        </li>
+      </ul>
+    </div>
+    {% csrf_token %}
+    <div class="mdl-card__title mdl-card--border">
       <h2 class="mdl-card__title-text">What is the reason for the patient to visit?</h2>
     </div>
     <head>
@@ -25,6 +72,7 @@
       </script>
     </datalist>
     </body>
+
     <div class="mdl-card__actions mdl-card--border">
       <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
         Submit
